// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses contributor string correctly 1`] = `
Object {
  "creators": Array [
    Object {
      "name": "Senter for nye medier, Høgskolen i Bergen",
      "type": "",
    },
    Object {
      "name": "Adalia film & media",
      "type": "",
    },
  ],
  "processors": Array [],
  "rightsholders": Array [
    Object {
      "name": "Norsk Helseinformatikk",
      "type": "supplier",
    },
    Object {
      "name": "ndla.no",
      "type": "distributor",
    },
  ],
}
`;

exports[`uses fallback if contributor string could not be parsed 1`] = `
Object {
  "creators": Array [
    Object {
      "name": "Senter for nye medier, Høgskolen i Bergen",
      "type": "",
    },
    Object {
      "name": "Opphavsmann Adalia film & media",
      "type": "",
    },
    Object {
      "name": "Adalia film & media",
      "type": "",
    },
    Object {
      "name": "Lucasfilm",
      "type": "",
    },
  ],
  "processors": Array [],
  "rightsholders": Array [],
}
`;
